Fix off-centre admin screen
Not sure if I added this or not, or why it was added but this explains
why it was ever-so slightly off-centre

--- a/app/assets/stylesheets/advisors.sass
+++ b/app/assets/stylesheets/advisors.sass
@@ -193,9 +193,9 @@ a[data-icon='envelope']
 .form-action
   margin-top: 2em
 
-.admin.my_clients.index
-  main.main.section
-    padding-left: 0
+// .admin.my_clients.index
+//   main.main.section
+//     padding-left: 0
 
 .admin.contact_notes.new
   h1.name
